force-app/main/default/objects/Opportunity/fields/Final_Selling_Price__c.field-meta.xml
<CustomField>
    <fullName>Final_Selling_Price__c</fullName>
    <formula>Amount * (1 + Internal_Margin__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Selling Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>