force-app/main/default/objects/Opportunity/fields/Internal_Margin__c.field-meta.xml
<CustomField>
    <fullName>Internal_Margin__c</fullName>
    <label>Internal Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>