force-app/main/default/objects/Opportunity/fields/Price_Request__c.field-meta.xml
<CustomField>
    <fullName>Price_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Request</label>
    <referenceTo>Price_Request__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>